# MetAlert-Search

./: .gitignore  README.md  codecov.yml  example_config.yaml  maintenance.py  pytest.ini  requirements.txt  setup.cfg
.github/: pull_request_template.md
.github/workflows/: pytest.yml  syntax.yml
doc/: MetAlert-Search-UML-classes.dia  MetAlert-Search-UML.dia
ma_search/: __init__.py  api.py  common.py  config.py
ma_search/data/: __init__.py  capxml.py  data.py  shape.py
ma_search/db/: __init__.py  dbsuper.py  sqlite.py
ma_search/utils/: __init__.py  ingest_cap.py
scripts/: Readme.md  import_data.py  import_frm_kartverket.py  import_from_kartverket.py  import_from_ted.py  ted_fjellomrader_sornorge.txt
tests/: conftest.py  test_core.py  tools.py
tests/db/: test_dbsuper.py  test_sqlite.py
tests/files/: METfare-20210921T070421.cap.xml  kommuner_291.json  mock.cap.xml  mockFailing.cap.xml  mockMulti.cap.xml  simple_Fylker_0.json  simple_Kommuner_0.json
tests/files/test_archive/: 957773d6-bc0d-5a72-be5e-27801d28e82b.json  a35e85f4-b0d1-5b1f-9db0-79007f49be07.json
tests/test_core/: test_api.py  test_common.py  test_config.py  test_init.py
tests/test_data/: test_cap.py  test_data.py  test_shape.py
tests/test_data/data/: simple_Fylker_0.json  simple_Kommuner_0.json  simple_Kommuner_291.json
tests/test_db/: test_dbsuper.py  test_sqlite.py
tests/test_utils/: test_ingest_cap.py
