[metadata]
name = ma_search
version = attr: ma_search.__version__
author = MET Norway
author_email = servicedesk@met.no
description = MetAlert Search and Indexing Tool
url = https://github.com/metno/MetAlert-Search
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
license = Apache 2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
project_urls =
    Source Code = https://github.com/metno/MetAlert-Search

[options]
python_requires = >=3.6
include_package_data = True
packages = find:
install_requires =
    pyyaml>=5.1
    flask>=1.0
    lxml>=4.2.0

[bdist_wheel]
universal = 0

[flake8]
ignore = E203,E221,E226,E228,E241,E251,E261,E266,E302,E305
max-line-length = 99
